# sentence-plagiarism

./: .gitignore  CHANGELOG.md  Makefile  README.md  cliff.toml  example.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: pytest.yml
sentence_plagiarism/: __init__.py  cli.py  plagiarism_checker.py  plagiarism_visualizer.py  similarity.py
sentence_plagiarism/templates/: plagiarism_report_template.html
sentence_plagiarism/visualization/: file_handlers.py  html_generator.py  models.py  text_processing.py  visualization_utils.py  visualizer.py
sentence_plagiarism/visualization/templates/: plagiarism_report.css  plagiarism_report.js  plagiarism_report_template.html
tests/: test_plagiarism_checker.py  test_plagiarism_visualizer.py  test_similarity.py  test_text_processing.py
tests/txt/: txt1.txt  txt2.txt  txt3.txt
